# pico-fido2

./: .gitmodules  CMakeLists.txt  README.md  build_m5stack_esp32s3.sh  partitions_esp32s3_8mb.csv  sdkconfig.defaults  sdkconfig.defaults.esp32s3  sdkconfig.defaults.m5stack_cardputer_adv  sdkconfig.defaults.m5stack_stick_s3
.github/workflows/: build.yml  codeql.yml
docs/: m5stack_esp32s3_references.md  m5stack_esp32s3_validation.md
src/fido2/: CMakeLists.txt  idf_component.yml  m5stack_button.c  m5stack_phy.c
src/m5boards/: CMakeLists.txt  Kconfig  pico_fido2_display.c  pico_fido2_m5_board.c  pico_fido2_m5pm1.c  pico_fido2_presence.c  pico_fido2_tca8418.c
src/m5boards/include/: pico_fido2_display.h  pico_fido2_m5_board.h  pico_fido2_m5pm1.h  pico_fido2_presence.h  pico_fido2_tca8418.h
workflows/: autobuild.sh
